##===----------------------------------------------------------------------===##
##
## This source file is part of the SwiftCrypto open source project
##
## Copyright (c) 2021 Apple Inc. and the SwiftCrypto project authors
## Licensed under Apache License v2.0
##
## See LICENSE.txt for license information
## See CONTRIBUTORS.md for the list of SwiftCrypto project authors
##
## SPDX-License-Identifier: Apache-2.0
##
##===----------------------------------------------------------------------===##

add_library(CCryptoBoringSSL STATIC
  "crypto/asn1/a_bitstr.c"
  "crypto/asn1/a_bool.c"
  "crypto/asn1/a_d2i_fp.c"
  "crypto/asn1/a_dup.c"
  "crypto/asn1/a_gentm.c"
  "crypto/asn1/a_i2d_fp.c"
  "crypto/asn1/a_int.c"
  "crypto/asn1/a_mbstr.c"
  "crypto/asn1/a_object.c"
  "crypto/asn1/a_octet.c"
  "crypto/asn1/a_strex.c"
  "crypto/asn1/a_strnid.c"
  "crypto/asn1/a_time.c"
  "crypto/asn1/a_type.c"
  "crypto/asn1/a_utctm.c"
  "crypto/asn1/asn1_lib.c"
  "crypto/asn1/asn1_par.c"
  "crypto/asn1/asn_pack.c"
  "crypto/asn1/f_int.c"
  "crypto/asn1/f_string.c"
  "crypto/asn1/posix_time.c"
  "crypto/asn1/tasn_dec.c"
  "crypto/asn1/tasn_enc.c"
  "crypto/asn1/tasn_fre.c"
  "crypto/asn1/tasn_new.c"
  "crypto/asn1/tasn_typ.c"
  "crypto/asn1/tasn_utl.c"
  "crypto/base64/base64.c"
  "crypto/bio/bio.c"
  "crypto/bio/bio_mem.c"
  "crypto/bio/connect.c"
  "crypto/bio/errno.c"
  "crypto/bio/fd.c"
  "crypto/bio/file.c"
  "crypto/bio/hexdump.c"
  "crypto/bio/pair.c"
  "crypto/bio/printf.c"
  "crypto/bio/socket.c"
  "crypto/bio/socket_helper.c"
  "crypto/blake2/blake2.c"
  "crypto/bn_extra/bn_asn1.c"
  "crypto/bn_extra/convert.c"
  "crypto/buf/buf.c"
  "crypto/bytestring/asn1_compat.c"
  "crypto/bytestring/ber.c"
  "crypto/bytestring/cbb.c"
  "crypto/bytestring/cbs.c"
  "crypto/bytestring/unicode.c"
  "crypto/chacha/chacha.c"
  "crypto/cipher_extra/cipher_extra.c"
  "crypto/cipher_extra/derive_key.c"
  "crypto/cipher_extra/e_aesctrhmac.c"
  "crypto/cipher_extra/e_aesgcmsiv.c"
  "crypto/cipher_extra/e_chacha20poly1305.c"
  "crypto/cipher_extra/e_des.c"
  "crypto/cipher_extra/e_null.c"
  "crypto/cipher_extra/e_rc2.c"
  "crypto/cipher_extra/e_rc4.c"
  "crypto/cipher_extra/e_tls.c"
  "crypto/cipher_extra/tls_cbc.c"
  "crypto/conf/conf.c"
  "crypto/cpu_aarch64_apple.c"
  "crypto/cpu_aarch64_fuchsia.c"
  "crypto/cpu_aarch64_linux.c"
  "crypto/cpu_aarch64_openbsd.c"
  "crypto/cpu_aarch64_sysreg.c"
  "crypto/cpu_aarch64_win.c"
  "crypto/cpu_arm_freebsd.c"
  "crypto/cpu_arm_linux.c"
  "crypto/cpu_intel.c"
  "crypto/crypto.c"
  "crypto/curve25519/curve25519.c"
  "crypto/curve25519/curve25519_64_adx.c"
  "crypto/curve25519/spake25519.c"
  "crypto/des/des.c"
  "crypto/dh_extra/dh_asn1.c"
  "crypto/dh_extra/params.c"
  "crypto/digest_extra/digest_extra.c"
  "crypto/dilithium/dilithium.c"
  "crypto/dsa/dsa.c"
  "crypto/dsa/dsa_asn1.c"
  "crypto/ec_extra/ec_asn1.c"
  "crypto/ec_extra/ec_derive.c"
  "crypto/ec_extra/hash_to_curve.c"
  "crypto/ecdh_extra/ecdh_extra.c"
  "crypto/ecdsa_extra/ecdsa_asn1.c"
  "crypto/engine/engine.c"
  "crypto/err/err.c"
  "crypto/evp/evp.c"
  "crypto/evp/evp_asn1.c"
  "crypto/evp/evp_ctx.c"
  "crypto/evp/p_dh.c"
  "crypto/evp/p_dh_asn1.c"
  "crypto/evp/p_dsa_asn1.c"
  "crypto/evp/p_ec.c"
  "crypto/evp/p_ec_asn1.c"
  "crypto/evp/p_ed25519.c"
  "crypto/evp/p_ed25519_asn1.c"
  "crypto/evp/p_hkdf.c"
  "crypto/evp/p_rsa.c"
  "crypto/evp/p_rsa_asn1.c"
  "crypto/evp/p_x25519.c"
  "crypto/evp/p_x25519_asn1.c"
  "crypto/evp/pbkdf.c"
  "crypto/evp/print.c"
  "crypto/evp/scrypt.c"
  "crypto/evp/sign.c"
  "crypto/ex_data.c"
  "crypto/fipsmodule/bcm.c"
  "crypto/fipsmodule/fips_shared_support.c"
  "crypto/hpke/hpke.c"
  "crypto/hrss/hrss.c"
  "crypto/keccak/keccak.c"
  "crypto/kyber/kyber.c"
  "crypto/lhash/lhash.c"
  "crypto/md4/md4.c"
  "crypto/md5/md5.c"
  "crypto/mem.c"
  "crypto/mldsa/mldsa.c"
  "crypto/obj/obj.c"
  "crypto/obj/obj_xref.c"
  "crypto/pem/pem_all.c"
  "crypto/pem/pem_info.c"
  "crypto/pem/pem_lib.c"
  "crypto/pem/pem_oth.c"
  "crypto/pem/pem_pk8.c"
  "crypto/pem/pem_pkey.c"
  "crypto/pem/pem_x509.c"
  "crypto/pem/pem_xaux.c"
  "crypto/pkcs7/pkcs7.c"
  "crypto/pkcs7/pkcs7_x509.c"
  "crypto/pkcs8/p5_pbev2.c"
  "crypto/pkcs8/pkcs8.c"
  "crypto/pkcs8/pkcs8_x509.c"
  "crypto/poly1305/poly1305.c"
  "crypto/poly1305/poly1305_arm.c"
  "crypto/poly1305/poly1305_vec.c"
  "crypto/pool/pool.c"
  "crypto/rand_extra/deterministic.c"
  "crypto/rand_extra/fork_detect.c"
  "crypto/rand_extra/forkunsafe.c"
  "crypto/rand_extra/getentropy.c"
  "crypto/rand_extra/ios.c"
  "crypto/rand_extra/passive.c"
  "crypto/rand_extra/rand_extra.c"
  "crypto/rand_extra/trusty.c"
  "crypto/rand_extra/urandom.c"
  "crypto/rand_extra/windows.c"
  "crypto/rc4/rc4.c"
  "crypto/refcount.c"
  "crypto/rsa_extra/rsa_asn1.c"
  "crypto/rsa_extra/rsa_crypt.c"
  "crypto/rsa_extra/rsa_print.c"
  "crypto/sha/sha1.c"
  "crypto/siphash/siphash.c"
  "crypto/spx/spx.c"
  "crypto/spx/spx_address.c"
  "crypto/spx/spx_fors.c"
  "crypto/spx/spx_merkle.c"
  "crypto/spx/spx_thash.c"
  "crypto/spx/spx_util.c"
  "crypto/spx/spx_wots.c"
  "crypto/stack/stack.c"
  "crypto/thread.c"
  "crypto/thread_none.c"
  "crypto/thread_pthread.c"
  "crypto/thread_win.c"
  "crypto/trust_token/pmbtoken.c"
  "crypto/trust_token/trust_token.c"
  "crypto/trust_token/voprf.c"
  "crypto/x509/a_digest.c"
  "crypto/x509/a_sign.c"
  "crypto/x509/a_verify.c"
  "crypto/x509/algorithm.c"
  "crypto/x509/asn1_gen.c"
  "crypto/x509/by_dir.c"
  "crypto/x509/by_file.c"
  "crypto/x509/i2d_pr.c"
  "crypto/x509/name_print.c"
  "crypto/x509/policy.c"
  "crypto/x509/rsa_pss.c"
  "crypto/x509/t_crl.c"
  "crypto/x509/t_req.c"
  "crypto/x509/t_x509.c"
  "crypto/x509/t_x509a.c"
  "crypto/x509/v3_akey.c"
  "crypto/x509/v3_akeya.c"
  "crypto/x509/v3_alt.c"
  "crypto/x509/v3_bcons.c"
  "crypto/x509/v3_bitst.c"
  "crypto/x509/v3_conf.c"
  "crypto/x509/v3_cpols.c"
  "crypto/x509/v3_crld.c"
  "crypto/x509/v3_enum.c"
  "crypto/x509/v3_extku.c"
  "crypto/x509/v3_genn.c"
  "crypto/x509/v3_ia5.c"
  "crypto/x509/v3_info.c"
  "crypto/x509/v3_int.c"
  "crypto/x509/v3_lib.c"
  "crypto/x509/v3_ncons.c"
  "crypto/x509/v3_ocsp.c"
  "crypto/x509/v3_pcons.c"
  "crypto/x509/v3_pmaps.c"
  "crypto/x509/v3_prn.c"
  "crypto/x509/v3_purp.c"
  "crypto/x509/v3_skey.c"
  "crypto/x509/v3_utl.c"
  "crypto/x509/x509.c"
  "crypto/x509/x509_att.c"
  "crypto/x509/x509_cmp.c"
  "crypto/x509/x509_d2.c"
  "crypto/x509/x509_def.c"
  "crypto/x509/x509_ext.c"
  "crypto/x509/x509_lu.c"
  "crypto/x509/x509_obj.c"
  "crypto/x509/x509_req.c"
  "crypto/x509/x509_set.c"
  "crypto/x509/x509_trs.c"
  "crypto/x509/x509_txt.c"
  "crypto/x509/x509_v3.c"
  "crypto/x509/x509_vfy.c"
  "crypto/x509/x509_vpm.c"
  "crypto/x509/x509cset.c"
  "crypto/x509/x509name.c"
  "crypto/x509/x509rset.c"
  "crypto/x509/x509spki.c"
  "crypto/x509/x_algor.c"
  "crypto/x509/x_all.c"
  "crypto/x509/x_attrib.c"
  "crypto/x509/x_crl.c"
  "crypto/x509/x_exten.c"
  "crypto/x509/x_name.c"
  "crypto/x509/x_pubkey.c"
  "crypto/x509/x_req.c"
  "crypto/x509/x_sig.c"
  "crypto/x509/x_spki.c"
  "crypto/x509/x_val.c"
  "crypto/x509/x_x509.c"
  "crypto/x509/x_x509a.c"
  "gen/crypto/err_data.c")

if(CMAKE_SYSTEM_NAME STREQUAL Darwin AND CMAKE_SYSTEM_PROCESSOR MATCHES "amd64|x86_64")
  target_sources(CCryptoBoringSSL PRIVATE
)
elseif(CMAKE_SYSTEM_NAME MATCHES "Linux|Android" AND CMAKE_SYSTEM_PROCESSOR MATCHES "amd64|x86_64")
  target_sources(CCryptoBoringSSL PRIVATE
)
elseif(CMAKE_SYSTEM_NAME STREQUAL Darwin AND CMAKE_SYSTEM_PROCESSOR MATCHES "arm64|aarch64")
  target_sources(CCryptoBoringSSL PRIVATE
)
elseif(CMAKE_SYSTEM_NAME MATCHES "Linux|Android" AND CMAKE_SYSTEM_PROCESSOR MATCHES "arm64|aarch64")
  target_sources(CCryptoBoringSSL PRIVATE
)
endif()

target_include_directories(CCryptoBoringSSL PUBLIC
  include)

target_compile_definitions(CCryptoBoringSSL PRIVATE
  $<$<PLATFORM_ID:Windows>:WIN32_LEAN_AND_MEAN>)
set_target_properties(CCryptoBoringSSL PROPERTIES
  INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/include;${CMAKE_Swift_MODULE_DIRECTORY}")

set_property(GLOBAL APPEND PROPERTY SWIFT_CRYPTO_EXPORTS CCryptoBoringSSL)
